Fix json response handling